# handler/showOpening.go
@@ -7,6 +7,17 @@ import (
 	"github.com/leonardodf95/goopportunities/schemas"
 )
 
+// @BasePath /api/v1
+// @Summary Show Opening
+// @Description Show a job opening
+// @Tags Opening
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening ID"
+// @Success 200 {object} ShowOpeningResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 400 {object} ErrorResponse
+// @Router /opening [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
